<resources>
    <string name="app_name">1595 Scouting App</string>
    <string name="settings">Settings</string>
    <string name="startScout">Scout new team</string>
    <string name="footer">1595 Scouting app version v0.2.1</string>
    <string name="back">◀ Back</string>
    <string name="phoneID"> %s </string>
    <string name="autoHeaderText">Autonomous:</string>
    <string name="teamNumberHeader">Enter team number to scout: </string>
    <string name="teamNumberPlaceholder">0000</string>
    <string name="teamToScout">Team to scout: </string>
    <string name="hasAuto">This team has an auto (Can cross baseline)</string>
    <string name="autoBalance">Team can place a cube on switch</string>
    <string name="autoScale">Team can place cube on scale</string>
    <string name="teleHeaderText">TeleOp:</string>
    <string name="teleBalance">Can place cube on switch</string>
    <string name="teleScale">Can place cube on scale</string>
    <string name="numberCube">Number of cubes placed</string>
    <string name="endGameClimb">Can climb</string>
    <string name="endGameClimbAssist">Can help others climb</string>
    <string name="numberOfCubes">Number of cubes placed: </string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="commentHeader">Comments:</string>
    <string name="comment"> </string>
    <string name="datapending">Sending data over bluetooth…</string>
</resources>
